--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
                 <img src="logo.png">
             </div>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="gallary.html">Gallary</a></li>
